--- a/content/glyphs.html
+++ b/content/glyphs.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../pergasha.css">
     <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico"/>
 
-    <title>NPCs - Pergasha</title>
+    <title>Glyphs - Pergasha</title>
 </head>
 <body>
 
@@ -27,39 +27,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pergashaMain.html">Home</a>
+                    <a class="nav-link" href="../pergasha.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Player Options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_classes.html">Classes</a>
-                      <a class="dropdown-item" href="pergasha_races.html">Races</a>
+                      <a class="dropdown-item" href="classes.html">Classes</a>
+                      <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="pergasha_feats.html">Feats</a>
-                      <a class="dropdown-item" href="pergasha_training.html">Training</a>
+                      <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_psionics.html">Psionics</a>
+                    <a class="nav-link" href="psionics.html">Psionics</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="pergasha_locations.html">Locations</a>
-                      <a class="dropdown-item" href="pergasha_items.html">Items</a>
-                      <a class="dropdown-item" href="pergasha_npcs.html">Npcs</a>
+                    <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
+                      <a class="dropdown-item" href="items.html">Items</a>
+                      <a class="dropdown-item" href="npcs.html">Npcs</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_rules.html">Rules</a>
+                    <a class="nav-link" href="rules.html">Rules</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link" href="pergasha_admin.html">Admin</a>
+                    <a class="nav-link" href="admin.html">Admin</a>
                 </li> -->
             </ul>
             </div>
@@ -67,9 +67,8 @@
 
     </header>
 
-    <h1 class="text-center mt-5">NPCS</h1>
+    <h1 class="text-center mt-5">GLYPHS</h1>
     <div class="row justify-content-center mb-5"><img class="" src="../assets/logos/WIP-logo.png" alt="Work in Progress"></div>
-
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
