--- a/content/training.html
+++ b/content/training.html
@@ -28,39 +28,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pergashaMain.html">Home</a>
+                    <a class="nav-link" href="../pergasha.html">Home</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Player Options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_classes.html">Classes</a>
-                      <a class="dropdown-item" href="pergasha_races.html">Races</a>
+                      <a class="dropdown-item" href="classes.html">Classes</a>
+                      <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="pergasha_feats.html">Feats</a>
-                      <a class="dropdown-item" href="pergasha_training.html">Training</a>
+                      <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_psionics.html">Psionics</a>
+                    <a class="nav-link" href="psionics.html">Psionics</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="pergasha_locations.html">Locations</a>
-                      <a class="dropdown-item" href="pergasha_items.html">Items</a>
-                      <a class="dropdown-item" href="pergasha_npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
+                      <a class="dropdown-item" href="items.html">Items</a>
+                      <a class="dropdown-item" href="npcs.html">Npcs</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_rules.html">Rules</a>
+                    <a class="nav-link" href="rules.html">Rules</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link" href="pergasha_admin.html">Admin</a>
+                    <a class="nav-link" href="admin.html">Admin</a>
                 </li> -->
             </ul>
             </div>
@@ -93,7 +93,7 @@
                             <div><strong>Psionic Talent.</strong> Select one Psionic Talent. You now know this talent and can use it as per standard rules.</div>
                             <div><strong>Psionic Discipline.</strong> Select one Psionic Discipline. You now know this discipline, its focus, and all the abilities for this discipline.</div>
                             <div><strong>Increase Psi Points.</strong> Gain a number of Psi Points equal to 1d6 + your Intelligence modifier. Your maximum increases, but your Psi Limit remains the same.</div>
-                            <div><strong>Feat.</strong> Select one <a href="pergasha_feats.html">feat</a> and gain its benefits.</div>
+                            <div><strong>Feat.</strong> Select one <a href="feats.html">feat</a> and gain its benefits.</div>
                             <div><strong>Trained Ability.</strong> Select an ability from the next section and gain its benefits. You must have sufficient Training Points for the ability as well as meet any requirements.</div>
                         </td>
                         </tr>
@@ -113,7 +113,7 @@
                     <span class="class-nav-item">Brutal Warrior</span>
                     <span class="class-nav-item badge badge-secondary badge-pill" >1</span>
                   </li>
-                <div class="collapse abilities trained-desc" id="ability-1" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: None</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You gain the ability to utilize Brutalities (<i>see the Path of the Primal Warrior in the <a href="pergasha_classes.html">class</a> section</i>). Select two Brutalities that you learn from the list. You can use a Brutality once per short rest.</p></div>
+                <div class="collapse abilities trained-desc" id="ability-1" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: None</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You gain the ability to utilize Brutalities (<i>see the Path of the Primal Warrior in the <a href="classes.html">class</a> section</i>). Select two Brutalities that you learn from the list. You can use a Brutality once per short rest.</p></div>
 
                 <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-2" id="trained-ability-2">
                     <span class="class-nav-item">Consumptive Power</span>
