--- a/content/admin.html
+++ b/content/admin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../pergasha.css">
     <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico"/>
 
-    <title>Locations - Pergasha</title>
+    <title>Admin - Pergasha</title>
 </head>
 <body>
 
@@ -25,41 +25,41 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pergashaMain.html">Home</a>
+                    <a class="nav-link" href="../pergasha.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Player Options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_classes.html">Classes</a>
-                      <a class="dropdown-item" href="pergasha_races.html">Races</a>
+                      <a class="dropdown-item" href="classes.html">Classes</a>
+                      <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="pergasha_feats.html">Feats</a>
-                      <a class="dropdown-item" href="pergasha_training.html">Training</a>
+                      <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_psionics.html">Psionics</a>
+                    <a class="nav-link" href="psionics.html">Psionics</a>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="pergasha_locations.html">Locations</a>
-                      <a class="dropdown-item" href="pergasha_items.html">Items</a>
-                      <a class="dropdown-item" href="pergasha_npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
+                      <a class="dropdown-item" href="items.html">Items</a>
+                      <a class="dropdown-item" href="npcs.html">Npcs</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_rules.html">Rules</a>
+                    <a class="nav-link" href="rules.html">Rules</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="pergasha_admin.html">Admin</a>
+                <!-- <li class="nav-item active">
+                    <a class="nav-link" href="admin.html">Admin</a>
                 </li> -->
             </ul>
             </div>
@@ -67,11 +67,9 @@
 
     </header>
 
-    <h1 class="text-center mt-5">LOCATIONS</h1>
-    <div class="row justify-content-center mb-5"><img class="" src="../assets/logos/WIP-logo.png" alt="Work in Progress"></div>
+    <h1>Admin page</h1>
 
     
-
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
