--- a/content/feats.html
+++ b/content/feats.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../pergasha.css">
     <link rel="shortcut icon" href="../assets/icons/pergasha-icon.ico"/>
 
-    <title>Glyphs - Pergasha</title>
+    <title>Feats - Pergasha</title>
 </head>
-<body>
+<body onload="featPage()">
 
 
     <header>
@@ -27,39 +27,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../pergashaMain.html">Home</a>
+                    <a class="nav-link" href="../pergasha.html">Home</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Player Options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_classes.html">Classes</a>
-                      <a class="dropdown-item" href="pergasha_races.html">Races</a>
+                      <a class="dropdown-item" href="classes.html">Classes</a>
+                      <a class="dropdown-item" href="races.html">Races</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="pergasha_feats.html">Feats</a>
-                      <a class="dropdown-item" href="pergasha_training.html">Training</a>
+                      <a class="dropdown-item" href="feats.html">Feats</a>
+                      <a class="dropdown-item" href="training.html">Training</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_psionics.html">Psionics</a>
+                    <a class="nav-link" href="psionics.html">Psionics</a>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
-                    <div class="dropdown-menu " aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha_glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="pergasha_locations.html">Locations</a>
-                      <a class="dropdown-item" href="pergasha_items.html">Items</a>
-                      <a class="dropdown-item" href="pergasha_npcs.html">Npcs</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="locations.html">Locations</a>
+                      <a class="dropdown-item" href="items.html">Items</a>
+                      <a class="dropdown-item" href="npcs.html">Npcs</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha_rules.html">Rules</a>
+                    <a class="nav-link" href="rules.html">Rules</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link" href="pergasha_admin.html">Admin</a>
+                    <a class="nav-link" href="admin.html">Admin</a>
                 </li> -->
             </ul>
             </div>
@@ -67,11 +67,26 @@
 
     </header>
 
-    <h1 class="text-center mt-5">GLYPHS</h1>
-    <div class="row justify-content-center mb-5"><img class="" src="../assets/logos/WIP-logo.png" alt="Work in Progress"></div>
+    <div class="row mt-5 mb-5 mr-0 ml-0 flex-wrap justify-content-center container-fluid" id="feat-container">
+        <div class="col list-group mb-5" id="feat-list" role="tablist">
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="all-filter" data-toggle="list" role="button">All Feats</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="psionics-filter" data-toggle="list" role="button">Psionic Feats</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="strength-filter" data-toggle="list" role="button">Strength</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="dexterity-filter" data-toggle="list" role="button">Dexterity</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="constitution-filter" data-toggle="list" role="button">Constitution</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="intelligence-filter" data-toggle="list" role="button">Intelligence</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="wisdom-filter" data-toggle="list" role="button">Wisdom</a>
+                <a class="list-group-item list-group-item-action list-group-item-secondary" id="charisma-filter" data-toggle="list" role="button">Charisma</a>
+        </div>
+        <div class="col d-flex flex-column" id="feat-display-section">
+        </div>
+    </div>
+
     
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
+
+    <script src="../pergasha.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
