--- a/pergasha.html
+++ b/pergasha.html
@@ -28,39 +28,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="pergashaMain.html">Home</a>
+                    <a class="nav-link" href="pergasha.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Player Options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_classes.html">Classes</a>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_races.html">Races</a>
+                      <a class="dropdown-item" href="content/classes.html">Classes</a>
+                      <a class="dropdown-item" href="content/races.html">Races</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_feats.html">Feats</a>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_training.html">Training</a>
+                      <a class="dropdown-item" href="content/feats.html">Feats</a>
+                      <a class="dropdown-item" href="content/training.html">Training</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha-pages/pergasha_psionics.html">Psionics</a>
+                    <a class="nav-link" href="content/psionics.html">Psionics</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       References
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_glyphs.html">Glyphs</a>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_locations.html">Locations</a>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_items.html">Items</a>
-                      <a class="dropdown-item" href="pergasha-pages/pergasha_npcs.html">Npcs</a>
+                      <a class="dropdown-item" href="content/glyphs.html">Glyphs</a>
+                      <a class="dropdown-item" href="content/locations.html">Locations</a>
+                      <a class="dropdown-item" href="content/items.html">Items</a>
+                      <a class="dropdown-item" href="content/npcs.html">Npcs</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pergasha-pages/pergasha_rules.html">Rules</a>
+                    <a class="nav-link" href="content/rules.html">Rules</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link" href="pergasha-pages/pergasha_admin.html">Admin</a>
+                    <a class="nav-link" href="content/admin.html">Admin</a>
                 </li> -->
             </ul>
             </div>
@@ -72,43 +72,43 @@
     <h1 class="text-center mt-5">Welcome to Pergasha!</h1>
     <div class="homepage-shortcuts d-flex justify-content-around flex-wrap">
 
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_races.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/races.html">
             <div><img class="shortcuts-icon" src="assets/icons/race-logo.svg"></div>
             <h4>Races</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_classes.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/classes.html">
             <div><img class="shortcuts-icon" src="assets/icons/class-logo.svg"></div> 
             <h4>Classes</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_items.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/items.html">
             <div><img class="shortcuts-icon" src="assets/icons/item-logo.svg"></div>
             <h4>Items</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_psionics.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/psionics.html">
             <div><img class="shortcuts-icon" src="assets/icons/psionics-logo.svg"></div>
             <h4>Psionics</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_feats.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/feats.html">
             <div><img class="shortcuts-icon" src="assets/icons/feats-logo.svg"></div>
             <h4>Feats</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_training.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/training.html">
             <div><img class="shortcuts-icon" src="assets/icons/training-logo.svg"></div>
             <h4>Training</h4>
         </a>
-       <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_glyphs.html">
+       <a class="shortcuts text-reset text-decoration-none" href="content/glyphs.html">
             <div><img class="shortcuts-icon" src="assets/icons/glyphs-logo.svg"></div>
             <h4>Glyphs</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_rules.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/rules.html">
             <div><img class="shortcuts-icon" src="assets/icons/rules-logo.svg"></div>
             <h4>Rules</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_npcs.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/npcs.html">
             <div><img class="shortcuts-icon pr-3" src="assets/icons/npcs-logo.svg"></div>
             <h4>NPCs</h4>
         </a>
-        <a class="shortcuts text-reset text-decoration-none" href="pergasha-pages/pergasha_locations.html">
+        <a class="shortcuts text-reset text-decoration-none" href="content/locations.html">
             <div><img class="shortcuts-icon" src="assets/icons/locations-logo.svg"></div>
             <h4>Locations</h4>
         </a>
