--- a/content/psionics.html
+++ b/content/psionics.html
@@ -260,7 +260,7 @@
                   </tbody>
                 </table>
                 <div class="shadow psionics-box rounded border border-secondary immortal-filter">
-                    <span class="psionics-title p-2" onclick="collapsibleBox()">Adaptive Body<span class="psionic-order">Immortal Discipline</span><span class="psionic-description">You can alter your body to match your surroundings, allowing you to withstand punishing environments. With greater psi energy, you can extend this protection to others.</span></span>
+                    <span class="psionics-title p-2"  role="button" onclick="collapsibleBox(this)">Adaptive Body<span class="psionic-order">Immortal Discipline</span><span class="psionic-description">You can alter your body to match your surroundings, allowing you to withstand punishing environments. With greater psi energy, you can extend this protection to others.</span></span>
                     <div class="psionics-body" style="display: none">
                         <span class="psionics-subtitle">Focus</span><ul style="list-style-type:none;"><li>While focused on this discipline, you don’t suffer any penalties for sustaining with half rations, you can hold your breath twice its normal time, and you need half the normal sleeping time (you have still to perform only light activity for the rest of your long rest). This focus must be active until you take a long rest for the benefits of half rations and sleeping time to take effect.</li></ul><span class="psionics-subtitle">Environmental Adaptation</span> <ul style="list-style-type:none;"><li><b>Cost: </b>1 psi point</li><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>Touch</li><li><b>Duration: </b>1 hour</li><li>You or a creature you touch ignores the effects of extreme heat or cold (but not cold or fire damage) for the next hour.</li></ul><span class="psionics-subtitle">Adaptive Shield</span><ul style="list-style-type:none;"><li><b>Cost: </b>2 psi point</li><li><b>Evoking Time: </b>1 reaction</li><li><b>Range: </b>Self</li><li><b>Duration: </b>Until the end of your next turn</li><li>When you take slashing, piercing, bludgeoning, acid, cold, fire, lightning, or thunder damage, you can use your reaction to gain resistance to damage of that type—including the triggering damage—until the end of your next turn. </li></ul><span class="psionics-subtitle">Injury Adaptation</span><ul style="list-style-type:none;"><li><b>Cost: </b>3 psi point</li><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>Touch</li><li><b>Duration: </b>Concentration, up to 1 hour</li><li>You can touch one creature and give it resistance to slashing, piercing, bludgeoning, acid, cold, fire, lightning, or thunder damage (your choice), which lasts until your concentration ends.</li></ul><span class="psionics-subtitle">Energy Immunity</span> <ul style="list-style-type:none;"><li><b>Cost: </b>5 psi point</li><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>Touch</li><li><b>Duration: </b>Concentration, up to 1 hour</li><li>You can touch one creature and give it immunity to acid, cold, fire, lightning, or thunder damage (your choice), which lasts until your concentration ends.</li></ul><span class="psionics-subtitle">Perfect Health (Mastery)</span> <ul style="list-style-type:none;"><li><i>Passive.</i> If you choose this discipline as your mastery, you become immune to disease and gain proficiency on Constitution saves.</li></ul>
                     </div>
@@ -274,27 +274,14 @@
 
     <!-- <footer class="text-right">©2020 Michael Baglio.</footer> -->
     <script>
-        function collapsibleBox(){
-            // var x = this.nextSibling.getAttribute('id'); 
-            console.log(this.target);
+        function collapsibleBox(box){
+          let boxBody = box.parentNode.children[1];
+          if (boxBody.style.display == 'none') {
+            boxBody.style.display = 'block';
+          } else {
+            boxBody.style.display = 'none';
+          }
         }
-
-
-        function collapsingButton(button, id) {
-        var section = document.getElementById(id);
-        if (button.innerText.includes('[-]')) {
-            button.innerText = '[+]';
-        } else {
-            button.innerText = '[-]';
-        }
-        if (section.style.display == "block") {
-            section.style.display = "none"
-        } else {
-            section.style.display = "block"
-        }
-
-        
-    }
     </script>
 
     <script src="../pergasha.js"></script>
