Psionics page + sticky filters

--- a/content/feats.html
+++ b/content/feats.html
@@ -68,7 +68,7 @@
     </header>
 
     <div class="row mt-5 mb-5 mr-0 ml-0 flex-wrap justify-content-center container-fluid" id="feat-container">
-        <div class="col list-group mb-5" id="feat-list" role="tablist">
+        <div class="col list-group mb-5 align-self-start sticky-top" id="feat-list" role="tablist">
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="all-filter" data-toggle="list" role="button">All Feats</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="psionics-filter" data-toggle="list" role="button">Psionic Feats</a>
                 <a class="list-group-item list-group-item-action list-group-item-secondary" id="strength-filter" data-toggle="list" role="button">Strength</a>
