--- a/content/races.html
+++ b/content/races.html
@@ -124,7 +124,7 @@
                         <tr><th class="race-table-title">Cloud Tribe Traits</th></tr>
                         <tr>
                             <td>
-                                <b><i>Light-Footed.</i> </b>Your movement speed increases by 5 feet.
+                                <b><i>Light-Footed.</i> </b>Your movement speed increases by 5 feet and your jump distance is doubled.
                             </td>
                         </tr>
                         <tr>
@@ -181,17 +181,24 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Heavy Armor.</i> </b>You are proficient in wearing heavy armor.
+                                <b><i>Heavily Armored.</i> </b>You are proficient in wearing heavy armor and using shields.
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Inner Fire.</i> </b>You have fire resistance. Also, your body burns unnaturally hot. You can focus your inner heat for 1 minute to ignite a flammable material or object, light a torch, or start a small fire. Your inner fire cannot melt metal and produces no light on your body.
+                                <b><i>Inner Fire.</i> </b>You have fire resistance and gain the Minor Pyrokinesis talent <i>(see below)</i>.
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <b><i>Firebrand.</i> </b>You can send out your inner fire down a weapon, heating it with a blue-hot flame for an instant. After striking an enemy with a melee weapon, you may use your reaction and roll 1 Hit Die + your Constitution modifier and deal this amount of fire damage to your target.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div style="color: #ca1b13;"><b>Minor Pyrokinesis</b></div>
+                                <div><i>Psionic Talent [racial]</i></div>
+                                <ul class="pt-2" style="list-style-type:none;"><li><b>Evoking Time: </b>1 action to 1 minute (see below)</li><li><b>Range: </b>30 feet</li><li><b>Duration: </b>Special</li><li>Your body burns unnaturally hot. You can focus this inner fire for 1 minute to ignite flammable material or an object, light a torch, or start a small fire. You must touch what you wish to ignite, and your inner fire cannot melt metal or produce light from your body.<br> Additionally, you use your affinity to affect fire in the following ways: <ul><li><b>Grow. </b>You can spend an action to expand flame within range up to 5 feet in one direction, provided that wood or other fuel is present in the new location. </li><li><b>Snuff. </b>You can use an action to extinguish flame within range in a 5-foot cube.</li><li><b>Extend. </b>You can spend 1 minute to slow a fire to burn fuel more efficiently. You double the life of a fire in a 5-foot cube. The duration is based on the fuel.</li></ul></li></ul>
                             </td>
                         </tr>
                         <tr>
@@ -331,11 +338,23 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Desiccate. </i></b>Your touch can desiccate a creature, plant, or an applicable material of water. You may use an action to make a melee touch attack. On a hit, deal 1 Hit Die + your Constitution modifier in necrotic damage to your target and heal yourself for the same amount as your desert aura transfers life-giving water to your body.<br>&nbsp;&nbsp; When you successfully desiccate a target, you also fulfill your water needs for the day regardless of the amount of damage dealt. This ability is also useful in the instant drying of meats for making rations. Once you use this ability, you cannot do so again until you complete a short rest.
+                                <b><i>Desiccate. </i></b>Your touch can desiccate a creature, plant, or an applicable material of water. You may use an action to make a melee touch attack. On a hit, deal 1 Hit Die + your Constitution modifier in necrotic damage to your target and heal yourself for the same amount as your desert aura transfers life-giving water to your body.<br>&nbsp;&nbsp;&nbsp;&nbsp; When you successfully desiccate a target, you also fulfill your water needs for the day regardless of the amount of damage dealt. This ability is also useful in the instant drying of meats for making rations. Once you use this ability, you cannot do so again until you complete a short rest.
                             </td>
                         </tr>
                         <tr>
-                        <th class="class-border border-0" colspan="10"></th>
+                            <td>
+                                <b><i>Sandshaper. </i></b>Your kind is imbued with the ability to use telekinesis to manipulate desert sands. You gain the Sandshaping talent <i>(see below)</i>.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div style="color: #ca1b13;"><b>Sandshaping</b></div>
+                                <div><i>Psionic Talent [racial]</i></div>
+                                <ul class="pt-2" style="list-style-type:none;"><li><b>Evoking Time: </b>1 action</li><li><b>Range: </b>30 feet</li><li><b>Duration: </b>Instantaneous to 1 minute (see below</li><li>You choose a portion of sand that you can see within range and fits within a 5-foot cube. You manipulate it in one of the following ways: <ul><li><b>Move. </b>If you target an area of loose sand, you can instantaneously excavate it, move it along the ground, and deposit it up to 5 feet away. This movement doesn’t have enough force to cause damage. </li><li><b>Flurry. </b>You can toss sand into the air and stir up a small flurry in a 5-foot area within range. Any creature in or that passes through the area of a flurry suffers disadvantage on their next attack. The flurry remains for 1 minute, and you can use an action to move the flurry. If you create another flurry, any existing flurries dissipate. Sand Pergashans are immune to the effects of these small flurries.</li></ul></li></ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="class-border border-0" colspan="10"></th>
                         </tr>
                     </tbody>
                 </table>
@@ -508,7 +527,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Psionic Finesse.</i> </b>You are naturally attuned to a segment of the psionic spectrum. Select one of the following Psionic Orders: Avatar, Awakened, Far Hand, Immortal, and Nomad.<br>&nbsp; &nbsp;  Whenever you use Psi Points for a discipline of this order, your cost decreases by 1 (minimum of 1 point is always spent). You must still abide by your Psi Limit for points spent. 
+                                <b><i>Psionic Finesse.</i> </b>You are naturally attuned to a segment of the psionic spectrum. Select one of the following Psionic Orders: Avatar, Awakened, Far Hand, Immortal, and Nomad.<br>&nbsp;&nbsp;  Whenever you use Psi Points for a discipline of this order, your cost decreases by 1 (minimum of 1 point is always spent). You must still abide by your Psi Limit for points spent. 
                             </td>
                         </tr>
                         <tr>
@@ -520,8 +539,8 @@
                             <td>
                                 <b><i>Manifestation.</i> </b>There are many powers tapped within psicrystals, and you have access to some of these in your own body. Once per short rest, you may use a bonus action to trigger one of the following manifestations: Amplify, Reflect, and Psistep (see below). Once you trigger a manifestation, it is active for one minute and does not require concentration. You can only have one manifestation active at a time. 
                                 <ul>
-                                    <li><b>Amplify: </b>Your attacks with weapons or your unarmed strike deal additional psychic damage to your foes equal to your Intelligence modifier.</li>
-                                    <li><b>Reflect: </b>You bounce back the pain others inflict upon you. Whenever you are hit with a melee weapon or natural attack by a creature that you can see, you reflect psychic damage back to them equal to your Intelligence modifier.</li>
+                                    <li><b>Amplify: </b>Your attacks with weapons or your unarmed strike deal additional psychic damage to your foes equal to your Intelligence modifier when you use your reaction to trigger this effect. You must be proficient with the weapon.</li>
+                                    <li><b>Reflect: </b>You bounce back the pain others inflict upon you. Whenever you are hit with a melee weapon or natural attack by a creature that you can see, you can use your reaction to reflect psychic damage back to them equal to your Intelligence modifier.</li>
                                     <li><b>Psistep: </b>Your movement speed increases by 10 feet. Also, whenever you are hit with an attack, you can use your reaction to instantly transport yourself to a location up to 15 feet away.</li>
                                 </ul>
                             </td>
@@ -566,7 +585,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Raw Material.</i> </b>You can shed your outer covering to create raw materials. Shedding is a tiring process requiring comfortable surroundings and no interruptions. After a full rest, you shed the equivalent of 2 square yards of fabric worth 1 uncommon barter.<br>&nbsp; &nbsp;  This material is similar to sheets of translucent hide that can be stored flat like fabric, ground down into 2 pounds of powder, or boiled into 1 pound of adhesive. The powder form of this material can be combined with an adhesive and pressed to create a product similar to wood. It takes 2 pounds of powder and 1 pound of adhesive to make a 5x5 foot panel 1- inch thick.
+                                <b><i>Raw Material.</i> </b>You can shed your outer covering to create raw materials. Shedding is a tiring process requiring comfortable surroundings and no interruptions. After a full rest, you shed the equivalent of 2 square yards of fabric worth 1 uncommon barter.<br>&nbsp;&nbsp;&nbsp;&nbsp;  This material is similar to sheets of translucent hide that can be stored flat like fabric, ground down into 2 pounds of powder, or boiled into 1 pound of adhesive. The powder form of this material can be combined with an adhesive and pressed to create a product similar to wood. It takes 2 pounds of powder and 1 pound of adhesive to make a 5x5 foot panel 1- inch thick.
                             </td>
                         </tr>
                         <tr>
@@ -579,15 +598,18 @@
                                 <b><i>Dire Growth.</i> </b>You can manipulate the bones and keratin within your body. As a bonus action, you activate one of thefollowing abilities for one minute. Once you use this feature, you can’t use it again until you finish a short rest.
                                 <ul>
                                     <li><b>Tail: </b>You sprout a prehensile tail from your spine that you can use like a third limb. This limb can wield a one-handed item such as a melee weapon, thrown weapon or shield with which you are proficient. If you use an Attack action, you may make a free attack with your armed tail. This tail cannot help wield a two-handed weapon or aim with ranged weapons.</li>
-                                    <li><b>Quills: </b>You shoot out defensive bony quills from your body. As a bonus action, all creatures adjacent to you take 1d4 piercing damage. The damage increases by 1d4 at 6th (2d4), 11th (3d4), and 16th (4d4) levels.</li>
                                     <li><b>Thick Skin: </b>You grow a chitinous layer over your body. You gain damage reduction equal to your proficiency modifier. If you benefit from damage reduction from another feature, they do not stack and only the highest benefit applies.</li>
-                                </ul>
-                                 
+                                </ul>   
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Bone Knuckles.</i> </b>Your fists are covered with bony plates. Your unarmed strike deals bludgeoning damage 1d6 + your Constitution modifier, and you are proficient with this attack.<br>&nbsp; &nbsp; If your unarmed strike has a higher dice roll than this feature, you can instead add bludgeoning damage to each successful strike equal to half of your Constitution modifier (minimum of +1).
+                                <b><i>Bone Knuckles.</i> </b>Your fists are covered with bony plates. Your unarmed strike deals bludgeoning damage 1d6 + your Constitution modifier, and you are proficient with this attack.<br>&nbsp;&nbsp;&nbsp;&nbsp; If your unarmed strike has a higher dice roll than this feature, you can instead add bludgeoning damage to each successful strike equal to half of your Constitution modifier (minimum of +1).
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b><i>Bone Shards.</i> </b>You can shoot out a piercing shard from your body. Your bone shards have a range of 30/60 feet and deals piercing damage equal to 1d6 + your Constitution modifier. You are proficient with this ranged attack. 
                             </td>
                         </tr>
                         <tr>
