--- a/content/races.html
+++ b/content/races.html
@@ -885,7 +885,12 @@
                         </tr>
                         <tr>
                             <td>
-                                <b><i>Feeding Frenzy.</i> </b>In battle, you can throw yourself into a vicious feeding frenzy. As a bonus action, you can make a special attack with your bite. If the attack hits, it deals its normal damage, and you gain temporary hit points equal to your twice your Constitution modifier (minimum of 1). Additionally, for the next minute, you may add your proficiency modifier to any weapon damage you deal to this creature. <br>&nbsp; &nbsp;  Finally, your food consumption needs are fulfilled for the day, and you can’t use this trait again until you finish a long rest. If your food requirements are increased beyond normal for the day, this ability only fulfills your base needs. Tail Slam. Your tail packs a surprise. As a bonus action, you can make a melee attack with your tail. It has reach of 10 feet and on a successful hit, deals bludgeoning damage equal to 1d6 + your Strength modifier.
+                                <b><i>Feeding Frenzy.</i> </b>In battle, you can throw yourself into a vicious feeding frenzy. As a bonus action, you can make a special attack with your bite. If the attack hits, it deals its normal damage, and you gain temporary hit points equal to your twice your Constitution modifier (minimum of 1). Additionally, for the next minute, you may add your proficiency modifier to any weapon damage you deal to this creature. <br>&nbsp; &nbsp;  Finally, your food consumption needs are fulfilled for the day, and you can’t use this trait again until you finish a long rest. If your food requirements are increased beyond normal for the day, this ability only fulfills your base needs.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b><i>Tail Slam. </i></b>Your tail packs a surprise. As a bonus action, you can make a melee attack with your tail. It has reach of 10 feet and on a successful hit, deals bludgeoning damage equal to 1d6 + your Strength modifier.
                             </td>
                         </tr>
                         <tr>
