--- a/content/training.html
+++ b/content/training.html
@@ -265,7 +265,7 @@
                     <span class="class-nav-item">Survivalist</span>
                     <span class="class-nav-item badge badge-secondary badge-pill" >1</span>
                 </li>
-                <div class="collapse abilities trained-desc" id="ability-19" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: Survival Instincts</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You are a ranger without equal and find more comfort in the wilderness than in a town or village. Select one Survival Instinct that you do not currently know. You may take this training multiple times and select a different Survival Instinct each time.</p></div>
+                <div class="collapse abilities trained-desc" id="ability-19" data-parent="#trained-abilities"><p class="p-4"><i>Requirements: Ranger's Survival Instincts</i><br><br>&nbsp;&nbsp;&nbsp;&nbsp;You are a ranger without equal and find more comfort in the wilderness than in a town or village. Select one Survival Instinct that you do not currently know. You may take this training multiple times and select a different Survival Instinct each time.</p></div>
 
 
                 <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center trained" data-toggle="collapse" role="button" aria-expanded="false"  data-target="#ability-20" id="trained-ability-20">
